--- a/src/assets/css/basics/layout.css
+++ b/src/assets/css/basics/layout.css
@@ -1,9 +1,27 @@
+.main-app {
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
-    max-width: 1100px;
+    /* flex-grow: 1; */
+    /* width: 100%; */
+    height: 100%;
+}
+
+.main-app > footer {
+    background-color: #111;
+    color: white;
+    grid-area: f;
+}
+
+.container {
+    /* max-width: 1100px;
     margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
-    padding: 20px;
+    padding: 20px; */
 }
 
 /* GRIDS */
@@ -11,4 +29,65 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     grid-gap: 10px;
+}
+
+.email-list {
+    /* float: left;
+    padding: 20px;
+    width: 70%;
+    background-color: #f1f1f1;
+    height: 300px; */
+    /* only for demonstration, should be removed */
+}
+
+.aside {
+    /* position: relative;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%; */
+
+    /* overflow: auto; */
+    /* z-index: 1; */
+
+    /* top: 0;
+    left: 0; */
+
+    /* overflow-x: hidden; */
+
+    /* padding-top: 20px; */
+
+
+    /* width: 0; */
+    /* /* transition: 0.5s; */
+
+    float: left;
+    width: 30%;
+    height: 300px;
+    /* only for demonstration, should be removed */
+    background: #ccc;
+    padding: 20px;
+}
+
+.folder-button {
+    padding: 16px;
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    text-align: left;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+}
+
+.folder-button:hover {
+    background-color: #818181;
+    color: white;
+}
+
+.folder-button i {
+    margin-right: 10px;
 }
