Add email preview css

--- a/src/assets/css/basics/base.css
+++ b/src/assets/css/basics/base.css
@@ -37,11 +37,10 @@ a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
-
 }
 
 a:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 button {
