--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,6 +10,7 @@
 /* Components */
 @import "./cmps/app-header.css";
 @import "./cmps/email-preview.css";
+@import "./cmps/email-details.css";
 
 
 
