--- a/src/assets/css/basics/base.css
+++ b/src/assets/css/basics/base.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    background-color: #f5f8fc;
     margin: 0;
     min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
