--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,6 +11,7 @@
 @import "./cmps/app-header.css";
 @import "./cmps/email-preview.css";
 @import "./cmps/email-details.css";
+@import "./cmps/email-compose.css";
 
 
 
