--- a/src/assets/css/basics/layout.css
+++ b/src/assets/css/basics/layout.css
@@ -1,27 +1,18 @@
-.main-app {
-    /* min-height: 100vh; */
-    display: flex;
-    flex-direction: column;
-}
-
 .container {
     /* flex-grow: 1; */
     /* width: 100%; */
     height: 100%;
 }
 
+.email-index{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
 .main-app > footer {
     background-color: #111;
     color: white;
     grid-area: f;
-}
-
-.container {
-    /* max-width: 1100px;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding: 20px; */
 }
 
 /* GRIDS */
@@ -31,44 +22,9 @@
     grid-gap: 10px;
 }
 
-.email-list {
-    /* float: left;
-    padding: 20px;
-    width: 70%;
-    background-color: #f1f1f1;
-    height: 300px; */
-    /* only for demonstration, should be removed */
-}
-
 .aside {
-    /* position: relative;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%; */
-
-    /* overflow: auto; */
-    /* z-index: 1; */
-
-    /* top: 0;
-    left: 0; */
-
-    /* overflow-x: hidden; */
-
-    /* padding-top: 20px; */
-
-
-    /* width: 0; */
-    /* /* transition: 0.5s; */
-
-    float: left;
-    width: 30%;
-    height: 300px;
-    /* only for demonstration, should be removed */
-    background: #ccc;
-    padding: 20px;
+    min-width: 256px;
+    /* padding: 20px; */
 }
 
 .folder-button {
@@ -84,10 +40,10 @@
 }
 
 .folder-button:hover {
-    background-color: #818181;
-    color: white;
+    background-color: #dadce0;
+    /* color: white; */
 }
 
 .folder-button i {
-    margin-right: 10px;
+    margin-right: 6px;
 }
