--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -12,6 +12,8 @@
 @import "./cmps/email-preview.css";
 @import "./cmps/email-details.css";
 @import "./cmps/email-compose.css";
+@import "./cmps/email-aside.css";
+@import "./cmps/email-main.css";
 
 
 
