Add compose css

--- a/src/assets/css/cmps/app-header.css
+++ b/src/assets/css/cmps/app-header.css
@@ -1,6 +1,6 @@
 .app-header {
-    color: white;
-    background-color: #666;
+    color:#202124;
+    background-color: #d3e3fd;
     padding: 10px;
     text-align: center;
     font-size: 15px;
